--- a/01_Front_End/assests/styles/LoginPage.css
+++ b/01_Front_End/assests/styles/LoginPage.css
@@ -179,9 +179,10 @@ form.sign-in-form {
 }
 
 .image {
-    width: 100%;
+    width: 80%;
     transition: transform 1.1s ease-in-out;
     transition-delay: 0.4s;
+    right: 200px;
 }
 
 .panel {
