--- a/01_Front_End/assests/styles/AdminDashboard.css
+++ b/01_Front_End/assests/styles/AdminDashboard.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-    --blue: #1200bb;
+    --blue: black;
     --white: #fff;
     --gray: #f5f5f5;
     --black1: #222;
@@ -31,7 +31,7 @@ body {
     position: fixed;
     width: 300px;
     height: 100%;
-    background: #01040e;
+    background:#6699CC;
     border-left: 10px solid #01040e;
     /*border-left: 10px solid #ff022c;*/
     transition: 0.5s;
@@ -78,7 +78,7 @@ body {
 
 .navigation ul li:hover a,
 .navigation ul li.hovered a {
-    color: var(--blue);
+    color: #6699CC;
 }
 
 .navigation ul li a .icon {
@@ -140,7 +140,7 @@ body {
     left: 300px;
     min-height: 100vh;
     /*background: var(--white);*/
-    background: #3D6099;
+    background: #F5F5DC;
     transition: 0.5s;
 }
 .main.active {
@@ -210,55 +210,6 @@ body {
 /*===================================================================================*/
 /* ======================= Cards ====================== */
 
-/*
-.cardBox {
-    position: relative;
-    width: 100%;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 30px;
-}
-
-.cardBox .card {
-    position: relative;
-    background: var(--white);
-    padding: 30px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-}
-
-.cardBox .card .numbers {
-    position: relative;
-    font-weight: 500;
-    font-size: 2.5rem;
-    color: var(--blue);
-}
-
-.cardBox .card .cardName {
-    color: var(--black2);
-    font-size: 1.1rem;
-    margin-top: 5px;
-}
-
-.cardBox .card .iconBx {
-    font-size: 3.5rem;
-    color: var(--black2);
-}
-
-.cardBox .card:hover {
-    background: var(--blue);
-}
-
-.cardBox .card:hover .numbers,
-.cardBox .card:hover .cardName,
-.cardBox .card:hover .iconBx {
-    color: var(--white);
-}
-*/
 
 .cardBox {
     position: relative;
@@ -285,7 +236,7 @@ body {
     position: relative;
     font-weight: 500;
     font-size: 2.5rem;
-    color: var(--blue);
+    color: #6699CC;
 }
 
 .cardBox .card .cardName {
@@ -308,159 +259,6 @@ body {
 .cardBox .card:hover .iconBx {
     color: var(--white);
 }
-
-
-
-/*===================================================================================*/
-/* ================== Order Details List ============== */
-/*.details {
-    position: relative;
-    width: 100%;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-gap: 30px;
-    !* margin-top: 10px; *!
-}
-
-.details .recentOrders {
-    position: relative;
-    display: grid;
-    min-height: 500px;
-    background: var(--white);
-    padding: 20px;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-    border-radius: 20px;
-}
-
-.details .cardHeader {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-.cardHeader h2 {
-    font-weight: 600;
-    color: var(--blue);
-}
-.cardHeader .btn {
-    position: relative;
-    padding: 5px 10px;
-    background: var(--blue);
-    text-decoration: none;
-    color: var(--white);
-    border-radius: 6px;
-}
-
-.details table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-}
-.details table thead td {
-    font-weight: 600;
-}
-.details .recentOrders table tr {
-    color: var(--black1);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.details .recentOrders table tr:last-child {
-    border-bottom: none;
-}
-.details .recentOrders table tbody tr:hover {
-    background: var(--blue);
-    color: var(--white);
-}
-.details .recentOrders table tr td {
-    padding: 10px;
-}
-.details .recentOrders table tr td:last-child {
-    text-align: end;
-}
-.details .recentOrders table tr td:nth-child(2) {
-    text-align: end;
-}
-.details .recentOrders table tr td:nth-child(3) {
-    text-align: center;
-}
-
-.status.delivered {
-    padding: 2px 4px;
-    background: #8de02c;
-    color: var(--white);
-    border-radius: 4px;
-    font-size: 14px;
-    font-weight: 500;
-}
-.status.pending {
-    padding: 2px 4px;
-    background: #e9b10a;
-    color: var(--white);
-    border-radius: 4px;
-    font-size: 14px;
-    font-weight: 500;
-}
-.status.return {
-    padding: 2px 4px;
-    background: #f00;
-    color: var(--white);
-    border-radius: 4px;
-    font-size: 14px;
-    font-weight: 500;
-}
-.status.inProgress {
-    padding: 2px 4px;
-    background: #1795ce;
-    color: var(--white);
-    border-radius: 4px;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.recentCustomers {
-    position: relative;
-    display: grid;
-    min-height: 500px;
-    padding: 20px;
-    background: var(--white);
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-    border-radius: 20px;
-}
-.recentCustomers .imgBx {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    overflow: hidden;
-}
-.recentCustomers .imgBx img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.recentCustomers table tr td {
-    padding: 12px 10px;
-}
-.recentCustomers table tr td h4 {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.2rem;
-}
-.recentCustomers table tr td h4 span {
-    font-size: 14px;
-    color: var(--black2);
-}
-
-.recentCustomers table tr:hover {
-    background: var(--blue);
-    color: var(--white);
-}
-.recentCustomers table tr:hover td h4 span {
-    color: var(--white);
-}*/
-/*===================================================================================*/
 
 
 
@@ -540,28 +338,22 @@ body {
 
     /*background-color: #0dcaf0;*/
 }
- .carDetails {
-
-     width: 100%;
-     /*height: 90vh;*/
-     background-color: #adb5bd;
-     border-radius: 30px;
-     padding: 20px;
-     /*display: flex;
-     justify-content: center;
-     align-items: center;*/
-
-     display: grid;
-     grid-template-columns: repeat(4, 1fr);
-     grid-gap: 30px;
- }
-
 .carBox h1 {
 
     display: flex;
     justify-content: center;
 
 }
+ .carDetails {
+
+     width: 100%;
+     background-color: #adb5bd;
+     border-radius: 30px;
+     padding: 20px;
+     display: grid;
+     grid-template-columns: repeat(4, 1fr);
+     grid-gap: 30px;
+ }
 
 .form-label {
     font-weight: bold;
@@ -618,10 +410,6 @@ body {
     justify-content: center;
     /*background-color: #ffca2c;*/
     padding: 20px;
-}
-
-/* Style for the button container */
-.carBtn {
     text-align: center;
 }
 
@@ -662,7 +450,6 @@ body {
     transform: scale(1.05);
 }
 
-
 /*==========Car Table=========================*/
 .carTable {
     position: relative;
@@ -695,20 +482,14 @@ thead {
 /* Style for table header cells */
 th {
     padding: 10px;
+    background-color: #0d6efd;
 }
 
 /* Style for table rows */
 tr {
     /*background-color: #f5f5f5;*/
-    background-color: #ffca2c;
+    background-color: #bacbe6;
     transition: background-color 0.3s, transform 0.2s;
-}
-
-/* Hover style for table rows */
-tr:hover {
-    /*background-color: #D3D3D3;*/
-    background-color: #ff022c;
-    transform: scale(1.02);
 }
 
 /* Style for table data cells */
@@ -716,11 +497,7 @@ td {
     padding: 10px;
 }
 
-/* Style for alternating row colors */
-tr:nth-child(odd) {
-    /*background-color: #fff;*/
-    background-color: #17a2b8;
-}
+
 
 /*==============  Car Page Styls End    =======================================================*/
 
@@ -784,44 +561,28 @@ tr:nth-child(odd) {
     align-items: center;
     justify-content: center;
 }
+/*=====Customer Buttons======*/
+.customerButtons {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
+    text-align: center;
+}
+
+/*===CUstomer Table===*/
+.customerTable {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
+}
+
 /*==============  Car Page Styls End    =======================================================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -829,33 +590,84 @@ tr:nth-child(odd) {
 /*==============  Driver Page Styls Start  =======================================================*/
 
 .driverBox {
-    height: 100vh;
+    position: relative;
     width: 100%;
-    background-color: #ffca2c;
+    padding: 20px;
+    display: flex;
 }
-.driverDetails h1 {
-    color: #20c997;
-    background-color: #ff022c;
+.driverDetails {
+
+    width: 100%;
+    /*height: 90vh;*/
+    background-color: #adb5bd;
+    border-radius: 30px;
+    padding: 20px;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;*/
+    /*display: flex;*/
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
 
 }
 
-/*==============  Car Page Styls End    =======================================================*/
 
+
+.driverBox h1 {
+
+    display: flex;
+    justify-content: center;
+
+}
+
+/*=====Driver Buttons======*/
+.driverButtons {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
+    text-align: center;
+}
+
+/*===Driver Table===*/
+.driverTable {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
+}
+/*==============  Driver Page Styls End    =======================================================*/
 
 
 
 /*================================================================================================*/
 /*==============  Car Rental Page Styls Start  =======================================================*/
-
 .carRentalBox {
-    height: 100vh;
+    position: relative;
     width: 100%;
-    background-color: #adb5bd;
+    padding: 20px;
+    display: flex;
 }
-.carRentalDetails h1 {
-    color: #20c997;
-    background-color: #ff022c;
 
+.carRentalBox h1 {
+
+    display: flex;
+    justify-content: center;
+
+}
+
+.carRentalTable {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
 }
 
 /*==============  Car Page Styls End    =======================================================*/
@@ -866,14 +678,202 @@ tr:nth-child(odd) {
 /*==============  Payments Page Styls Start  =======================================================*/
 
 .paymentBox {
-    height: 100vh;
+    position: relative;
     width: 100%;
-    background-color: #bacbe6;
+    padding: 20px;
+    display: flex;
 }
-.paymentsDetails h1 {
-    color: #20c997;
-    background-color: #ff022c;
 
+.paymentBox h1 {
+
+    display: flex;
+    justify-content: center;
+
+}
+
+.paymentBtnDates,.btnOfPayments {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
+    text-align: center;
+}
+.btnSearchPayment:hover {
+    background-color: #0dcaf0;
+    border-radius: 30px;
+}
+.btnClearPayment:hover {
+    background-color: #0dcaf0;
+    border-radius: 30px;
+}
+
+/*Payment Tanle*/
+.paymentTable {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
 }
 
 /*==============  Car Page Styls End    =======================================================*/
+
+
+
+/*================================================================================================*/
+/*==============  Rental Request Page Styls Start  =======================================================*/
+.rentalRequestBox {
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+}
+.rentalRequestDetails {
+
+    width: 100%;
+    /*height: 90vh;*/
+    background-color: #adb5bd;
+    border-radius: 30px;
+    padding: 20px;
+
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+}
+
+.rentalRequestBox h1 {
+
+    display: flex;
+    justify-content: center;
+
+}
+
+/*Rental Request Buttons*/
+.btnRentalRequest {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
+    text-align: center;
+}
+
+/*Rental Request Table*/
+.rentalRequestTable {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: #ffca2c;*/
+    padding: 20px;
+}
+
+
+
+
+/*Search - Meeka oona wunoth UnComment kara ganna*/
+/*!* Style for the search container *!
+.input-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.rentalRequestSearch {
+    display: flex;
+    justify-content: center;
+}
+
+!* Style for the search input *!
+#searchRentalRequest {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    width: 100%;
+    margin-right: 10px;
+}
+
+!* Style for the Search button *!
+#btnSearchRentalRequest {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#btnSearchRentalRequest:hover {
+    background-color: #0056b3;
+}
+
+!* Style for the search icon *!
+#btnSearchRentalRequest i {
+    padding: 10px;
+}*/
+/**/
+
+/*==============  Rental Request Page Styls End    =======================================================*/
+
+
+
+/*================================================================================================*/
+/*==============  Income Report Page Styls Start  =======================================================*/
+.incomeReportBox {
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+}
+
+.incomeReportBox h1 {
+
+    display: flex;
+    justify-content: center;
+
+}
+
+
+/* Style for the container */
+.forInBox {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+/* Style for the income tab */
+.incomeTab {
+    background-color: #0dcaf0;
+    color: #fff;
+    border: 1px solid #007BFF;
+    border-radius: 5px;
+    padding: 10px 20px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    height: 300px;
+}
+
+.incomeTab:hover {
+    background-color: #0056b3;
+}
+
+/* Style for the income name */
+.incomeName {
+    font-weight: bold;
+}
+
+
+/*==============  Income Report Page Styls End    =======================================================*/
+
+
