--- a/01_Front_End/assests/styles/LoginPage.css
+++ b/01_Front_End/assests/styles/LoginPage.css
@@ -14,7 +14,7 @@ input {
 .container {
     position: relative;
     width: 100%;
-    background-color: #01040e;
+    background-color: #6699CC;
     min-height: 100vh;
     overflow: hidden;
 }
@@ -62,7 +62,7 @@ form.sign-in-form {
 
 .title {
     font-size: 2.2rem;
-    color: #1743e3;
+    color: black;
     margin-bottom: 10px;
 }
 
@@ -135,7 +135,7 @@ form.sign-in-form {
 }
 
 .btn {
-    width: 150px;
+    width: 250px;
     background-color: #04befe;
     border: none;
     outline: none;
@@ -149,7 +149,7 @@ form.sign-in-form {
     transition: 0.5s;
 }
 .btn:hover {
-    background-color: #1743e3;
+    background-color: #6699CC;
     color: #101214;
 }
 
@@ -169,20 +169,23 @@ form.sign-in-form {
     height: 2000px;
     width: 2000px;
     top: -10%;
-    right: 48%;
+right: 48%;
     transform: translateY(-50%);
     /*background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);*/
-    background-image: linear-gradient(-45deg, #56ffef 0%, #0059f5 100%);
+    /*background-image: linear-gradient(-45deg, #F5F5DC 0%, #5A5A5A 100%);*/
     transition: 1.8s ease-in-out;
-    border-radius: 50%;
+    border-radius: 80%;
     z-index: 6;
 }
 
 .image {
-    width: 80%;
+
+
+    width: 90%;
     transition: transform 1.1s ease-in-out;
     transition-delay: 0.4s;
-    right: 200px;
+
+
 }
 
 .panel {
@@ -225,10 +228,10 @@ form.sign-in-form {
     margin: 0;
     background: none;
     border: 2px solid #fff;
-    width: 130px;
-    height: 41px;
+    width: 230px;
+    height: 69px;
     font-weight: 600;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
 }
 
 .right-panel .image,
@@ -291,13 +294,13 @@ form.sign-in-form {
 
 /* Style the label */
 .custom1 {
-    background-color: #FF5733; /* Background color for the container */
+    background-color: #6699CC; /* Background color for the container */
     padding: 15px; /* Add some padding to the container */
     border-radius: 10px; /* Rounded corners for the container */
 }
 
 .custom2 {
-    color: #3498DB; /* Text color for the label */
+    color: black; /* Text color for the label */
 }
 
 .custom3 {
@@ -310,9 +313,9 @@ form.sign-in-form {
 
 /* Style for the file input itself */
 .custom3[type="file"] {
-    background-color: #E74C3C; /* Background color for the file input */
+    background-color: #6699CC; /* Background color for the file input */
     color: #FFFFFF; /* Text color for the file input */
-    border: 2px solid #E74C3C; /* Border color for the file input */
+    border: 2px solid #6699CC; /* Border color for the file input */
     border-radius: 5px; /* Rounded corners for the file input */
     padding: 10px; /* Add some padding to the file input */
 }
